package com.qiding.design;

public interface Iterator {
    Boolean hasNext();
    Object next();
    Object first();
}
